# Agent

./: .dockerignore  .gitignore  docker-compose.yml  mcp_server.py  pyproject.toml
.github/workflows/: agents-ci-cd.yml  core_orchestrator_ci.yml  integration_test.yml  protected-security-tests.yml  python-app.yml  python-reusable-ci.yml  secret-file-policy.yml
A2A_MCP/agents/: orchestration_agent.py
agents/: tester.py
app/: mcp_gateway.py  mcp_tooling.py
auth/: security.py
docs/security/: credential-rotation-log.md
fastapi/: __init__.py  testclient.py
fastapi/security/: __init__.py
orchestrator/: __init__.py  api.py  llm_util.py  metrics.py  webhook.py
rbac/: rbac_service.py
scripts/: check-tracked-secrets.sh
scripts/ci/: check_no_fully_commented_tests.py
tests/: conftest.py  test_api_startup_import.py  test_auth.py  test_mcp_tooling.py  test_mcp_tooling_security.py  test_oidc_validation.py  test_tester.py
